# n2d

./: Agents.md  CMakeLists.txt  readme.md  vcpkg-configuration.json  vcpkg.json
apps/: n2d_cli.cpp
docs/: DESIGN.md
include/n2d/: api.hpp
include/n2d/core/: error.hpp
include/n2d/io/: inspect.hpp
src/io/: inspect.cpp
tests/: CMakeLists.txt
tests/unit/: bake_tests.cpp  inspect_tests.cpp
